Add markdown sections to graph theory notebook for better organization and update execution counts

--- a/graph_theory.ipynb
+++ b/graph_theory.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0b0dc401",
+   "metadata": {},
+   "source": [
+    "# Graph Theory"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "345d76b7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "ca1f64dc",
    "metadata": {},
    "outputs": [],
@@ -53,8 +61,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2be7ee7e",
+   "metadata": {},
+   "source": [
+    "## Graph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "112be9ea",
    "metadata": {},
    "outputs": [
@@ -121,8 +137,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90046c9c",
+   "metadata": {},
+   "source": [
+    "## DiGraph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "b7196e63",
    "metadata": {},
    "outputs": [
@@ -165,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "e9e98ce8",
    "metadata": {},
    "outputs": [
@@ -206,8 +230,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27a49123",
+   "metadata": {},
+   "source": [
+    "# Weighted Graph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "59016869",
    "metadata": {},
    "outputs": [
@@ -257,8 +289,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92fb85b0",
+   "metadata": {},
+   "source": [
+    "## Phone Calls Network"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "1d994517",
    "metadata": {},
    "outputs": [
@@ -301,6 +341,14 @@
     "print(f\"\\nIn-degree range: {min(in_degrees.values())} to {max(in_degrees.values())}\")\n",
     "print(f\"Out-degree range: {min(out_degrees.values())} to {max(out_degrees.values())}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb08122a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
