Refactor graph drawing function in notebook for improved readability and consistency; reset execution counts to null.

--- a/graph_theory.ipynb
+++ b/graph_theory.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ca1f64dc",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "    Draw a graph using NetworkX and Matplotlib.\n",
     "    Works with both Graph and DiGraph.\n",
     "    Automatically shows edge weights if present.\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "    -----------\n",
     "    G : networkx.Graph or networkx.DiGraph\n",
@@ -39,25 +39,44 @@
     "    \"\"\"\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    pos = nx.spring_layout(G, seed=42)\n",
-    "    \n",
+    "\n",
     "    # Draw with arrows if it's a directed graph\n",
     "    if G.is_directed():\n",
-    "        nx.draw(G, pos, with_labels=True, node_color='lightblue', \n",
-    "                node_size=800, font_size=16, font_weight='bold',\n",
-    "                edge_color='black', width=2, arrows=True, \n",
-    "                arrowsize=20, arrowstyle='->', connectionstyle='arc3,rad=0.1')\n",
+    "        nx.draw(\n",
+    "            G,\n",
+    "            pos,\n",
+    "            with_labels=True,\n",
+    "            node_color=\"lightblue\",\n",
+    "            node_size=800,\n",
+    "            font_size=16,\n",
+    "            font_weight=\"bold\",\n",
+    "            edge_color=\"black\",\n",
+    "            width=2,\n",
+    "            arrows=True,\n",
+    "            arrowsize=20,\n",
+    "            arrowstyle=\"->\",\n",
+    "            connectionstyle=\"arc3,rad=0.1\",\n",
+    "        )\n",
     "    else:\n",
-    "        nx.draw(G, pos, with_labels=True, node_color='lightblue', \n",
-    "                node_size=800, font_size=16, font_weight='bold',\n",
-    "                edge_color='black', width=2)\n",
-    "    \n",
+    "        nx.draw(\n",
+    "            G,\n",
+    "            pos,\n",
+    "            with_labels=True,\n",
+    "            node_color=\"lightblue\",\n",
+    "            node_size=800,\n",
+    "            font_size=16,\n",
+    "            font_weight=\"bold\",\n",
+    "            edge_color=\"black\",\n",
+    "            width=2,\n",
+    "        )\n",
+    "\n",
     "    # Draw edge weights if they exist\n",
-    "    edge_labels = nx.get_edge_attributes(G, 'weight')\n",
+    "    edge_labels = nx.get_edge_attributes(G, \"weight\")\n",
     "    if edge_labels:\n",
     "        nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, font_size=12)\n",
-    "    \n",
-    "    plt.axis('off')\n",
-    "    plt.show()\n"
+    "\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -70,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "112be9ea",
    "metadata": {},
    "outputs": [
@@ -133,7 +152,7 @@
     "print(f\"Average degree (using 2L/N): {avg_degree_formula}\")\n",
     "\n",
     "# Draw the graph\n",
-    "draw_graph(G)\n"
+    "draw_graph(G)"
    ]
   },
   {
@@ -146,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b7196e63",
    "metadata": {},
    "outputs": [
@@ -184,12 +203,12 @@
     "print(f\"Edges: {list(DG.edges())}\")\n",
     "\n",
     "# Draw the directed graph\n",
-    "draw_graph(DG)\n"
+    "draw_graph(DG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e9e98ce8",
    "metadata": {},
    "outputs": [
@@ -217,16 +236,20 @@
     "DG2 = nx.DiGraph()\n",
     "\n",
     "# Add edges in both directions for some connections\n",
-    "edges = [(1, 2), (2, 1),  # Bidirectional between 1 and 2\n",
-    "         (1, 3),          # Only 1 -> 3\n",
-    "         (3, 2),          # Only 3 -> 2\n",
-    "         (2, 4), (4, 2)]  # Bidirectional between 2 and 4\n",
+    "edges = [\n",
+    "    (1, 2),\n",
+    "    (2, 1),  # Bidirectional between 1 and 2\n",
+    "    (1, 3),  # Only 1 -> 3\n",
+    "    (3, 2),  # Only 3 -> 2\n",
+    "    (2, 4),\n",
+    "    (4, 2),\n",
+    "]  # Bidirectional between 2 and 4\n",
     "\n",
     "DG2.add_edges_from(edges)\n",
     "\n",
     "print(f\"DiGraph with bidirectional edges:\")\n",
     "print(f\"Edges: {list(DG2.edges())}\")\n",
-    "draw_graph(DG2)\n"
+    "draw_graph(DG2)"
    ]
   },
   {
@@ -239,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "59016869",
    "metadata": {},
    "outputs": [
@@ -285,7 +308,7 @@
     "print(f\"Edges with weights: {list(GW.edges(data='weight'))}\")\n",
     "\n",
     "# Draw the weighted graph - weights are shown automatically!\n",
-    "draw_graph(GW)\n"
+    "draw_graph(GW)"
    ]
   },
   {
@@ -298,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "1d994517",
    "metadata": {},
    "outputs": [
@@ -320,7 +343,9 @@
    ],
    "source": [
     "# Load the phone calls graph from edgelist as a directed graph\n",
-    "phone_graph = nx.read_edgelist('networks/phonecalls.edgelist.txt', create_using=nx.DiGraph())\n",
+    "phone_graph = nx.read_edgelist(\n",
+    "    \"networks/phonecalls.edgelist.txt\", create_using=nx.DiGraph()\n",
+    ")\n",
     "\n",
     "# Print basic information about the graph\n",
     "print(f\"Phone Calls Network (Directed):\")\n",
