Add resources section to graph theory notebook for enhanced reference and learning opportunities.

--- a/graph_theory.ipynb
+++ b/graph_theory.ipynb
@@ -20,6 +20,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7924b267",
+   "metadata": {},
+   "source": [
+    "## Resources\n",
+    "\n",
+    "- [NetworkX Documentation](https://networkx.org/documentation/stable/)\n",
+    "- [NetworkX Tutorial](https://networkx.org/documentation/stable/tutorial.html)\n",
+    "- [NetworkX API Reference](https://networkx.org/documentation/stable/reference/index.html)\n",
+    "- [Gephi - Graph Visualization Software](https://gephi.org/)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ca1f64dc",
