Add new resource link to graph theory notebook for additional dataset reference.

--- a/graph_theory.ipynb
+++ b/graph_theory.ipynb
@@ -30,7 +30,8 @@
     "- [Documentación de NetworkX](https://networkx.org/documentation/stable/)\n",
     "- [Tutorial de NetworkX](https://networkx.org/documentation/stable/tutorial.html)\n",
     "- [Referencia API de NetworkX](https://networkx.org/documentation/stable/reference/index.html)\n",
-    "- [Gephi - Software de Visualización de Grafos](https://gephi.org/)\n"
+    "- [Gephi - Software de Visualización de Grafos](https://gephi.org/)\n",
+    "- [Network Science Book - Datasets](https://networksciencebook.com/translations/en/resources/data.html)\n"
    ]
   },
   {
